--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "email": "lushpai@gmail.com"
     },
     "require": {
-        "php": ">=5.3",
+        "php": ">=5.3"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
